--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
+    "svgr": "npx @svgr/cli -d src/Icons/ assets/",
     "start": "react-scripts start",
     "app": "react-scripts start",
     "build": "react-scripts build",
@@ -38,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@svgr/cli": "^5.4.0"
   }
 }
